# wlm

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: continuous-integration.yml
docs/: high_level_design.md
docs/design/: EnumWindows_callback_activity_diagram.puml  apply_profile_action_diagram.puml  apply_profile_activity_diagram.puml  software_design.asciidoc
docs/design/plantuml/: command_config_activity_diagram.puml  system_component_diagram.puml  use_case_diagram.puml
src/: config.rs  error.rs  layout.rs  lib.rs  main.rs  monitor.rs  window.rs  wm.rs
src/platform/: mod.rs  unix.rs  win.rs
src/platform/windows/: mod.rs  monitor.rs  window.rs
tests/: add.rs  config.rs  init.rs
