[package]
name = "window-layout-manager"
version = "0.1.0"
authors = ["Erich Schroeter <erichschroeter@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "psapi", "handleapi", "securitybaseapi"] }