[package]
name = "wlm"
version = "0.3.0"
authors = ["Erich Schroeter <erichschroeter@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "A command-line tool to move and resize windows based on a config."
readme = "README.md"
homepage = "https://github.com/erichschroeter/wlm"
repository = "https://github.com/erichschroeter/wlm"
keywords = ["cli", "windowing"]
categories = ["command-line-utilities"]

[lib]
name = "window_layout_manager"
path = "src/lib.rs"

[[bin]]
name = "wlm"
path = "src/bin/main.rs"

[dependencies]
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
directories = "2.0"
prettytable-rs = "^0.8"
derive_builder = "0.9.0"
failure = "0.1.7"
failure_derive = "0.1.7"
exitfailure = "0.5.1"

[dev-dependencies]
assert_cmd = "1.0.1"
assert_fs = "1.0.0"
predicates = "1.0.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "psapi", "handleapi", "dwmapi"] }