[package]
name = "wlm"
version = "0.4.0"
authors = ["Erich Schroeter <erichschroeter@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "A command-line tool to move and resize windows based on a config."
readme = "README.md"
homepage = "https://github.com/erichschroeter/wlm"
repository = "https://github.com/erichschroeter/wlm"
keywords = ["cli", "windowing"]
categories = ["command-line-utilities"]

[lib]
name = "wlm"
path = "src/lib.rs"

[[bin]]
name = "wlm"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.4.8", features = ["string", "env"] }
config = "0.13.3"
cor-args = "0.1.1"
derive_builder = "0.12.0"
directories = "5.0.1"
env_logger = "0.10.1"
log = "0.4.20"
prettytable-rs = "^0.10"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.27"

[dev-dependencies]
assert_cmd = "1.0.1"
assert_fs = "1.0.0"
predicates = "1.0.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "psapi", "handleapi", "dwmapi"] }
